added a class diagram

--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -20,8 +20,8 @@ beam coming from the reactor's moderator;
 from the neutron to the sample; and 
 (iii) the sample-analyser-detector axis, which selects the energy transfer, $E$.
 
-During the usual operation of a TAS, the user selects $\left( \underline{Q}, E \right)$ coordinates in the reciprocal (dual)
-crystal space of the sample to be measured. While the vector space of crystal coordinates 
+During the usual operation of a TAS, the user selects $\left( \underline{Q}, E \right)$ coordinates
+in the reciprocal (dual) crystal space of the sample to be measured. While the vector space of crystal coordinates
 is in general non-Euclidean, crystal coordinates have a one-to-one correspondence with the axis angles 
 of the TAS. The correspondence can be calculated by the so-called ``$UB$ matrix formalism'' \cite{Lumsden2005}. 
 Here, $B$ is the transformation matrix from crystal to lab coordinates and $U$ is a rotation to a specific 
@@ -32,16 +32,8 @@ not every $\left( \underline{Q}, E \right)$ coordinate point is accessible, and 
 usually required beforehand to avoid collisions of the instrument with walls, collisions with itself or movements
 which could pull out fragile cables.
 
-The goal this work was the development and implementation of a path-finding algorithm for
+The goal this work was the development and implementation of a pathfinding algorithm for
 neutron triple-axis spectrometers. Given a user-selected target coordinate in reciprocal crystal space, 
 the algorithm is able to navigate the instrument in its constrained angular space. The problem is similar to
 moving a robot arm around obstacles, with the addition of having the start and target coordinates in a 
 coordinate system with a different metric.
-
-%\begin{figure}[ht]
-%	\begin{centering}
-%	\includegraphics[width=0.66\textwidth]{figures/thales.jpg}
-%	\end{centering}
-%	\caption{The picture shows the triple-axis spectrometer \textit{ThALES} \cite{thales} at the ILL.}
-%	\label{fig:tas}
-%\end{figure}
