--- a/tex/foreword.tex
+++ b/tex/foreword.tex
@@ -7,7 +7,7 @@
 
 \chapter*{Foreword}
 \addcontentsline{toc}{chapter}{Foreword}
-The present work is concerned about the development of a path-finding system for neutron triple-axis
+The present work is concerned about the development of a pathfinding system for neutron triple-axis
 spectrometers using the concepts of robot motion planning.
 It touches upon multiple disciplines in physics and computer science. Among these are the field
 of neutron scattering, concept of solid-state physics and crystallography for the physical part,
@@ -19,14 +19,14 @@ them.
 
 \paragraph{Layout of this work}
 After some general introduction in chapter \ref{ch:intro}, the two subsequent chapters 
-provide the necessary building blocks for the development of the path-finding algorithm that follows.
+provide the necessary building blocks for the development of the pathfinding algorithm that follows.
 These are chapter \ref{ch:xtal}, which reviews important concepts from crystallography and
 neutron scattering, namely crystal and instrument coordinate systems,
 as well as chapter \ref{ch:algos}, which presents data structures and algorithms 
-that are necessary for the path-finding.
-Chapter \ref{ch:paths} is concerned about the general concept of path-finding and motion planning, providing
+that are necessary for the pathfinding.
+Chapter \ref{ch:paths} is concerned about the general concept of pathfinding and motion planning, providing
 a review of different alternatives for the present problem as well as a high-level overview of the algorithm
-to be developed in this work. The actual details and the implementation of the path-finding algorithm
+to be developed in this work. The actual details and the implementation of the pathfinding algorithm
 is outlined in chapter \ref{ch:impl}.
 Chapter \ref{ch:gl} contains a brief introduction to the mathematics of three-dimensional computer graphics.
 This maths is made use of in chapter \ref{ch:gui} which is concerned about the user interfaces to the software
