--- a/tex/tests.tex
+++ b/tex/tests.tex
@@ -24,7 +24,7 @@ of the main programs. These are described in section \ref{sec:tests_tools}.
 
 \section{Test tools}
 \label{sec:tests_tools}
-First, we describe the collection of tools that served in testing aspects of the main path-finding algorithm.
+First, we describe the collection of tools that served in testing aspects of the main pathfinding algorithm.
 These tools share a common \textit{Qt}-based \cite{web_Qt} GUI codebase and are similar in their usage.
 They all use the \lstinline[language=C++]|QGraphicsScene| class \cite{web_QGraphicsScene} and through that
 allow a dynamic manipulation of their respective geometrical objects using the mouse. 
