--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1084,6 +1084,17 @@
 
 @misc
 {
+	web_domainmodeldiagram,
+	author = {Kirill Fakhroutdinov},
+	title = {{UML Class and Object Diagrams Overview}},
+	year = "2009-2020",
+	url = "https://www.uml-diagrams.org/class-diagrams-overview.html",
+	note = "[Online; accessed 30-September-2021]"
+}
+
+
+@misc
+{
 	web_aabb,
 	author = {{Mozilla Developer Network Web Docs}},
 	title = {{3D collision detection}},
