--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -58,7 +58,7 @@
 \newcommand{\ill}{Institut Laue-Langevin (ILL), 71 avenue des Martyrs, CS 20156, 38042 Grenoble cedex 9, France}
 \newcommand{\fuh}{Fernuniversit\"at in Hagen (FUH), Universit\"atsstraße 47, 58097 Hagen, Germany}
 
-\title{Path-finding for triple-axis spectrometers}
+\title{Pathfinding for Triple-Axis Spectrometers}
 \author{Tobias Weber, tweber@ill.fr}
 
 \maketitle
