--- a/tex/xtal.tex
+++ b/tex/xtal.tex
@@ -388,9 +388,9 @@ This chapter introduced some important concepts from solid-state physics and cry
 for an understanding of the basic coordinate system transformations from the generally non-orthogonal (real or 
 reciprocal) crystal coordinates to the orthonormal lab coordinates used at the instrument.
 In practice, it is the crystal coordinates that are entered into the instrument control software by
-the user, not the raw instrument angles. A path-finding system for triple-axis spectrometers thus has to know both. 
+the user, not the raw instrument angles. A pathfinding system for triple-axis spectrometers thus has to know both.
 Internally, it will be more convenient for the software to use instrument-related coordinates, as we will see in 
 the following chapters, but the input and output will be in crystal coordinates.
 
 Having established all the necessary physical foundations, the next chapter will proceed to do the same for the 
-essential concepts in computer science before putting everything together in a path-finding algorithm.
+essential concepts in computer science before putting everything together in a pathfinding algorithm.
