--- a/tex/interfaces.tex
+++ b/tex/interfaces.tex
@@ -1,5 +1,5 @@
 %
-% path-finding user interfaces
+% pathfinding user interfaces
 % @author Tobias Weber <tweber@ill.fr>
 % @date july-2021
 % @license see 'LICENSE' file
@@ -63,7 +63,7 @@ accepts the output base class and dispatches to the desired child object.
 
 The core module functionality is self-contained and does, for instance, not depend on any GUI code.
 It is therefore straightforward to statically or dynamically link it to external applications which 
-wish to use the path-finding functionality. To avoid exposing the user to the complexities of 
+wish to use the pathfinding functionality. To avoid exposing the user to the complexities of
 the C++ language, a more comfortable approach is provided by both the graphical as well 
 as the \textit{Python} interface, which are described in the following sections.
 
