--- a/tex/outlook.tex
+++ b/tex/outlook.tex
@@ -17,10 +17,10 @@ with immediate feedback of the results.
 
 Ideas from the field of computational geometry proved indispensable for the success of the project,
 first and foremost the concept of the Voronoi diagram and its bisectors, but also index trees and sweep 
-algorithms, which ensure the efficiency of the path-finding algorithm.
+algorithms, which ensure the efficiency of the pathfinding algorithm.
 The calculation of Voronoi diagrams for line segments which approximate curves is also the most
 calculation-intensive part of the algorithm, together with the quantisation of the configuration space.
-In total, our approach to path-finding is a mix between what Choset calls the grid-based model and the 
+In total, our approach to pathfinding is a mix between what Choset calls the grid-based model and the
 topological approach \cite{Choset2010_ch8}.
 The purely topological approach would consist of calculating the form of the obstacles analytically in
 configuration space and computing from that the medial axis (see chapter \ref{sec:voro_median}), also
@@ -34,7 +34,7 @@ line segment Voronoi diagrams, for which very efficient libraries are available.
 A purely grid-based approach, on the other hand, would not keep the instrument at the furthest distance
 of the obstacles.
 
-The importance of a path-finding system for triple-axis spectrometers can be seen as the development 
+The importance of a pathfinding system for triple-axis spectrometers can be seen as the development
 of a software with a similar goal had already been attempted before, in a tool named 
 \textit{Paprika} \cite{Muehlbauer2006}, a fact that was brought to our attention at the very end of the present work.
 At its time, \textit{Paprika} gained relatively little traction, though, and this might be due to their approach 
@@ -62,8 +62,8 @@ With its modular design and the possibility to use it as C++ library without any
 (see chapter \ref{sec:library}), care has already been taken to make this step as smooth as possible.
 In a joint project with Y. Le Goc from the instrument control group at the ILL, a plug-in module for
 the instrument control software \textit{NOMAD} \cite{web_NOMAD} will be developed that links against 
-the path-finding library of this work. 
-The idea is to have a settings tab in \textit{NOMAD} where the user can switch on or off the path-finding
+the pathfinding library of this work.
+The idea is to have a settings tab in \textit{NOMAD} where the user can switch on or off the pathfinding
 functionality. If it is on, subsequent drive commands will not be directly executed and all motors thus
 driven at the same time independently, but instead piped through the plug-in module. 
 The module will give back a list of drive commands to \textit{NOMAD} which drives the instrument
