--- a/tex/interfaces.tex
+++ b/tex/interfaces.tex
@@ -199,6 +199,10 @@ of all 3-d objects that are displayed on the screen, are stored.
 Data in this secondary object system is updated automatically as soon as the user edits an object 
 property from the main \lstinline[language=C++]|InstrumentSpace| instance.
 
+From within the GUI, the developer documentation is accessible via the ``Help'' menu.
+The documentation for the entire source code is automatically generated using 
+the \textit{Doxygen} \cite{web_doxygen} documentation generator.
+
 
 \begin{figure}[htb]
 	\begin{minipage}{0.45 \textwidth}
