--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1230,6 +1230,18 @@
 
 @misc
 {
+	web_doxygen,
+	title = {{Doxygen (Software)}},
+	author = {Dimitri van Heesch},
+	year = {1997-2021},
+	url = "https://www.doxygen.org",
+	github = "https://github.com/doxygen/doxygen",
+	note = "[Online; accessed 11-September-2021]",
+}
+
+
+@misc
+{
 	web_opencv,
 	title = {{OpenCV C++ Library (Software)}},
 	author = {{Intel Corporation and various authors}},
