mentioned settings dialog

--- a/tex/interfaces.tex
+++ b/tex/interfaces.tex
@@ -202,6 +202,8 @@ property from the main \lstinline[language=C++]|InstrumentSpace| instance.
 From within the GUI, the developer documentation is accessible via the ``Help'' menu.
 The documentation for the entire source code is automatically generated using 
 the \textit{Doxygen} \cite{web_doxygen} documentation generator.
+Furthermore, a settings dialog exists which allows for a fine-tuning of the algorithm's
+parameters.
 
 
 \begin{figure}[htb]
