--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -6,7 +6,7 @@
 %
 
 \chapter*{Acknowledgements}
-\addcontentsline{toc}{chapter}{Acknowledgements}
+\addcontentsline{toc}{chapter}{Acknowledgements and Thanks}
 
 I wish to thank my thesis advisors, Prof. Dr. Christian Icking and Dr. Lihong Ma, for accepting 
 and supporting this project, for their advice and our regular discussions, the friendly atmosphere, 
@@ -24,5 +24,8 @@ at the ILL, for supporting this project and for the great atmosphere and working
 
 Also not to forget the continuing support from my former advisor for past theses, Prof. Dr. Peter B\"oni,
 as well as from Prof. Dr. Christian Pfleiderer, Prof. Dr. Markus Garst, and Dr. Marc Janoschek in all our ongoing projects.
+
+Financial support by the Institut Laue-Langevin via its \textit{P\^ole Formation} is gratefully acknowledged,
+an I wish to thank Carole Fauchier for the administrative help.
 
 Last but not least also many thanks to my family and to Soilhat for always being there for me!
