--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -21,16 +21,15 @@ It has furthermore been archived at this address:
 \url{https://archive.softwareheritage.org/browse/origin/?origin_url=https://code.ill.fr/scientific-software/takin/paths}.
 
 The latest version of the software's source code archive (ver-0.9) bears the 
-filename ``taspaths-sep21b.tar.xz'' and has the SHA-256 \cite{web_sha256sum} 
+filename ``taspaths-oct21.tar.xz'' and has the SHA-256 \cite{web_sha256sum}
 checksum:
 
 \begin{centering}
-158a5d422cde338f\\
-ca04a9a9471cd23e\\
-154109926f33e147\\
-50bc23cb2ccd55c0.\\
+c4addc00595e725c\\
+ff336e31128b29f3\\
+dbb99c05090061aa\\
+2c954115626a42aa.
 \end{centering}
-
 
 
 \paragraph{Source code layout}
