--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -25,10 +25,11 @@ filename ``taspaths-oct21.tar.xz'' and has the SHA-256 \cite{web_sha256sum}
 checksum:
 
 \begin{centering}
-c4addc00595e725c\\
-ff336e31128b29f3\\
-dbb99c05090061aa\\
-2c954115626a42aa.
+\texttt{\\
+c4addc00595e725c\phantom{.} \\
+ff336e31128b29f3\phantom{.} \\
+dbb99c05090061aa\phantom{.} \\
+2c954115626a42aa.}\\
 \end{centering}
 
 
