--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -13,8 +13,8 @@ and supporting this project, for their advice and our regular discussions, the f
 as well as for always being available for questions.
 
 Equal thanks to Dr. Martin B\"ohm, leader of the spectroscopy group at the ILL and instrument 
-scientist at the Thales spectrometer, to Yannick Le Goc (computer scientist at the instrument 
-control and electronics group), as well as Dr. Paul Steffens (Thales instrument scientist) for our 
+scientist at the \textit{Thales} spectrometer, to Yannick Le Goc (computer scientist at the instrument 
+control and electronics group), as well as Dr. Paul Steffens (\textit{Thales} instrument scientist) for our 
 regular discussions about various triple-axis automatisation projects, our experiments and the
 instrumental aspects. I furthermore wish to thank Jérôme Locatelli (instrument control group) for
 all the help with \textit{NOMAD}, the instrument control system at the ILL, and the technical discussions
