--- a/tex/algos.tex
+++ b/tex/algos.tex
@@ -217,7 +217,7 @@ are \textit{VRONI} by M. Held \cite{Held2001}, \textit{OpenVoronoi} by A. E. Wal
 by W. Schumann \cite{DiplomaSchumann}, as well as the Voronoi calculator \cite{web_boost_polygon_voronoi} 
 by A. Sydorchukof, which is part of the \textit{Boost.Polygon}  \cite{web_boost_polygon, Simonson2009} 
 C++ library.
-A further noteworthy library, which is capable of caluclating 2D Voronoi diagrams and Delaunay triangulations
+A further noteworthy library, which is capable of caluclating 2-dimensional Voronoi diagrams and Delaunay triangulations
 for both vertex and line segment sites is the \textit{2D Segment Delaunay Graphs} library by M. Karavelas \cite{web_2dsegdel, Karavelas2004, Karavelas2006} 
 which is part of the \textit{CGAL} \cite{web_cgal} software package.
 The first three libraries are not feasible for the present project, though: 
@@ -750,7 +750,7 @@ same vertex sites. The R trees shows a clearly more pronounced overlap than the 
 \subsection{Software libraries}
 BSP trees are very popular in the field of computer graphics, and free and open-source implementations are 
 readily available \cite{web_bsp_faq}. Unfortunately and surprisingly, the \textit{Boost} C++ libraries \cite{web_boost},
-which is the preferred ressource for data types and algorithms in this work, do not feature one. 
+which is the preferred resource for data types and algorithms in this work, do not feature one. 
 Equally surprisingly, the \textit{Qt} libraries do feature a BSP tree implementation, but it is not part of 
 their public API, but only used internally in the \lstinline[language=C++]|QGraphicsScene| class \cite{web_QGraphicsScene}.
 
