--- a/tex/foreword.tex
+++ b/tex/foreword.tex
@@ -29,7 +29,7 @@ a review of different alternatives for the present problem as well as a high-lev
 to be developed in this work. The actual details and the implementation of the pathfinding algorithm
 is outlined in chapter \ref{ch:impl}.
 Chapter \ref{ch:gl} contains a brief introduction to the mathematics of three-dimensional computer graphics.
-This maths is made use of in chapter \ref{ch:gui} which is concerned about the user interfaces to the software
+This mathematical formalism is made use of in chapter \ref{ch:gui} which is concerned about the user interfaces to the software
 developed in this work. The user interfaces include a graphical one based on an interactive, three-dimensional
 view of the instrument, as well as a purely command-line scripting interface.
 Chapter \ref{ch:tests} describes unit testing necessary for maintaining
