--- a/tex/gl.tex
+++ b/tex/gl.tex
@@ -257,7 +257,7 @@ $\underline{v} \in \mathbb{R}^3$  reduces to two quaternion multiplications and 
 where $q^{*} = \left( r,\, -\underline{s} \right)$ is the complex conjugate quaternion \cite[pp. 110-111]{Kuipers2002}.
 
 \paragraph{SO(3)}
-Representatnts of the special orthogonal group $\mathrm{SO\left(3\right)}$, which comprises rotations in 
+Representants of the special orthogonal group $\mathrm{SO\left(3\right)}$, which comprises rotations in 
 three-dimensional space by an angle $\alpha$ around a normalised vector $\underline{v}$ \cite[pp. 849-851]{Arfken2013},
 can be directly written in quaternion form in an analogy to Euler's formula for complex numbers \cite{wiki_quatrot}:
 \begin{equation}
