--- a/tex/interfaces.tex
+++ b/tex/interfaces.tex
@@ -319,7 +319,7 @@ The library \textit{QCustomPlot} \cite{web_QCustomPlot} is used for plotting.
 \subsection{Case study and illustrative example}
 We proceed to present an illustrative example modelled after a situation that arose during an 
 experiment that we performed at the instrument \textit{Thales} \cite{thales} some time ago. 
-The situation is an archetypical one which often arises during a measurement and which
+The situation is an archetypal one which often arises during a measurement and which
 can be automatised and visualised using the present software.
 The software was not yet available at the time of the experiment, though, so we still had to resort 
 to long-winded manual driving of the instrument.
