--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -181,9 +181,10 @@ with the attached detector.
 	\centering
 	\includegraphics[width=0.75\textwidth]{figures/thales.jpg}
 	\caption[The Thales instrument at the ILL.]{
-		The triple-axis spectrometer ThALES \cite{thales} at the Institut Laue-Langevin in Grenoble, France. The neutron
-		path from the reactor to the detector is marked as white arrows. The momentum transfer, $\hbar \underline{Q}$,
-		is also shown. This picture is reproduced from the supplementary information of Ref. \cite{skxpaper}.}
+		The triple-axis spectrometer \textit{Thales} \cite{thales} at the Institut Laue-Langevin in Grenoble, France.
+		The neutron path from the reactor to the detector is marked as white arrows. The momentum transfer, 
+		$\hbar \underline{Q}$, is also shown.
+		This picture is reproduced from the supplementary information of Ref. \cite{skxpaper}.}
 	\label{fig:thales}
 \end{figure}
 
