--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1630,6 +1630,7 @@
 	author = {{The SWIG Developers}},
 	year = {1995-2021},
 	url = "http://www.swig.org/",
+	github = "https://github.com/swig/swig",
 	OPThowpublished = "\url{http://www.swig.org/}",
 	note = "[Online; accessed 2-August-2021]",
 }
