--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -470,6 +470,7 @@
 	author = {T. Weber},
 }
 
+
 @article
 {
 	Takin2016,
@@ -482,6 +483,22 @@
 	doi = "10.1016/j.softx.2016.06.002",
 	OPTurl = "http://www.sciencedirect.com/science/article/pii/S2352711016300152",
 	author = {T. Weber and R. Georgii and P. B\"oni},
+}
+
+
+@article
+{
+	Weber2014,
+	author = {T. Weber and G. Brandl and R. Georgii and P. B\"oni},
+	title = {{An open-source software package for data treatment in a MIEZE experiment}},
+	year = {2014},
+	month = {July},
+	journal = {Journal of Physics: Conference Series},
+	volume = {528},
+	pages = {012034},
+	publisher = {{IOP Publishing}},
+	doi = {10.1088/1742-6596/528/1/012034},
+	OPTurl = {https://doi.org/10.1088/1742-6596/528/1/012034},
 }
 
 
