--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -59,7 +59,7 @@ The layout of the software's source code archive is shown in table \ref{tab:sour
 		cmake/ & & Modules for the \textit{CMake} \cite{Martin2007, web_cmake} build system. & \tabularnewline
 		\hline
 		setup/ & & Compile and setup scripts for... & \tabularnewline
-		           & osx/ & ... \textit{MacOS}, & \tabularnewline
+		           & osx/ & ... \textit{MacOS} using \textit{Homebrew} \cite{web_homebrew}, & \tabularnewline
 		           & deb/ & ... \textit{GNU/Linux}, mainly \textit{Ubuntu}, & \tabularnewline
 		           & mingw/ & ... \textit{MinGW} \cite{web_mingw64}. & \tabularnewline
 		\hline
