--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1545,6 +1545,18 @@
 
 @misc
 {
+	web_homebrew,
+	title = {{Homebrew (Software)}},
+	author = {Max Howell},
+	year = {2021},
+	url = "https://brew.sh",
+	github = "https://github.com/Homebrew/brew",
+	note = "[Online; accessed 1-October-2021]",
+}
+
+
+@misc
+{
 	web_cmake,
 	title = {{CMake (Software)}},
 	author = {{Kitware, Inc.}},
