--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1548,7 +1548,7 @@
 	web_homebrew,
 	title = {{Homebrew (Software)}},
 	author = {Max Howell},
-	year = {2021},
+	year = {2009 - 2021},
 	url = "https://brew.sh",
 	github = "https://github.com/Homebrew/brew",
 	note = "[Online; accessed 1-October-2021]",
